--- a/hh.css
+++ b/hh.css
@@ -1,42 +1,47 @@
-/* .tabs {
+.man {
     display: flex;
-    list-style: none;
     padding: 0;
     margin: 0;
 }
 
-.tabs li {
+.hover-butt {
     border-right: 1px solid white;
     padding: 10px;
     background: #eee;
     transition: 0.3s;
 }
-.tabs li.active ,
-.tabs li:hover {
+.hover-butt.active-back ,
+.hover-butt:hover {
     background-color: #b25d5d;
     border-top: 1px solid rgb(50, 6, 243);
 }
-.content {
-    background-color: #b25d5d;
-}
-.content > div {
-    padding: 20px;
-}
-.content > div:not(:first-child) {
-    display: none;
-} */
 
-
-.container {
-    margin: 20px auto;
-    padding: 20px;
-    width: 300px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    text-align: center;
+body {
+    font-family: Arial, Helvetica, sans-serif;
   }
-  
-  #message {
-    margin-top: 20px;
-    font-weight: bold;
+  .tabs {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .tabs li {
+    padding: 10px;
+    background-color: #f6f4f4;
+    border-right: 1px solid white;
+    cursor: pointer;
+    transition: 0.2s;
+  }
+  .tabs li.active,
+  .tabs li:hover {
+    background-color: #ddd;
+  }
+  .content {
+    background-color: #ddd;
+  }
+  .content > div {
+    padding: 20px;
+  }
+  .content > div:not(:first-child) {
+    display: none;
   }
