i learn about settimout and function

--- a/hh.css
+++ b/hh.css
@@ -1,4 +1,4 @@
-.man {
+/* .man {
     display: flex;
     padding: 0;
     margin: 0;
@@ -44,4 +44,4 @@ body {
   }
   .content > div:not(:first-child) {
     display: none;
-  }
+  } */
