--- a/hh.css
+++ b/hh.css
@@ -1,47 +1,15 @@
-/* .man {
-    display: flex;
-    padding: 0;
-    margin: 0;
-}
+.main {
 
-.hover-butt {
-    border-right: 1px solid white;
-    padding: 10px;
-    background: #eee;
-    transition: 0.3s;
 }
-.hover-butt.active-back ,
-.hover-butt:hover {
-    background-color: #b25d5d;
-    border-top: 1px solid rgb(50, 6, 243);
+.main .contener{
+  margin-left: auto;
 }
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  .tabs {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  .tabs li {
-    padding: 10px;
-    background-color: #f6f4f4;
-    border-right: 1px solid white;
-    cursor: pointer;
-    transition: 0.2s;
-  }
-  .tabs li.active,
-  .tabs li:hover {
-    background-color: #ddd;
-  }
-  .content {
-    background-color: #ddd;
-  }
-  .content > div {
-    padding: 20px;
-  }
-  .content > div:not(:first-child) {
-    display: none;
-  } */
+.main .contener .box{
+  
+}
+.main .contener .box .child-1{
+  
+}
+.main .contener .box .child-2{
+  
+}
